            - In the model 'FieldsConfig' :
                - The attributes "_excluded_fnames" & "_required_fnames" have been removed.
                - The method 'update_form_fields()' now takes a form instance, and can set the _meta attribute (backported to 2.5.6/2.4.13).
        # The method 'creme_core.gui.bricks._BrickRegistry.get_bricks()' does not build 'SpecificRelationsBrick' & 'CustomBrick' when no entity is given.
        # In 'creme_core.views' :
            - In the context created by the class-view 'search.Search',
              "models" is now a list of CremeEntity classes (use "verbose_names" instead).
            - In the view-mixin 'entity_filter.EntityFilterMixin', the attribute 'efilter_registry' has been replaced by 'efilter_type'.
        # In the templatetag "{% search_form %}" (from library "creme_search")
            - The argument "user" has been removed.
            - A mandatory argument "models" has been added.
        # Apps :
            * Creme_config :
                - The value of class attribute "id" of several Brick classes (for bricks configuration) have changed (mainly "block" => "brick").
                - In the class 'registry._ConfigRegistry' :
                    - The attribute '_user_brick_ids' has been replaced by '_user_brick_classes'.
                    - The attribute '_portal_brick_ids' has been replaced by '_portal_brick_classes'.
                - In the class 'registry._AppConfigRegistry' :
                    - The attribute '_brick_ids' has been replaced by '_brick_classes'.
                    - The method '_register_bricks' now takes Brick classes.
                - The view 'views.portal.Portal' injects "bricks" (in the context) instead "app_bricks".
            * Billing :
                - In JavaScript, the actions "billing-hatmenubar-invoice-number" & "billing-hatmenubar-add-document" have been removed.
            * Mobile :